Fix overflow issue in mobile

--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@ body {
     background-image: url(./resources/mario-bg.jpg);
     background-size: cover;
     height: 100vh;
+    width: 100vw;
+    overflow-y: hidden;
+    overflow-y: hidden;
 }
 
 #board {
